grammar.js
    source_code: ($) => repeat(choice($._statement, $.class_statement, $._definition, $.do_block, $.interface_statement, $.method_statement, $.constant)),

    
    _statement_body: ($) => choice($.do_block, prec(2, $._statement), $.constant),

    _terminator: ($) => /\s*\./,

    _logical_operator: ($) =>
      prec.left(
        choice(alias($._and_operator, "AND"), alias($._or_operator, "OR"))
      ),

    assignment_operator: ($) => choice("=", $._augmented_assignment),

    _additive_operator: ($) => choice("+", "-"),

    _multiplicative_operator: ($) => choice("*", "/", kw("MODULO"), kw("MOD")),

    _comparison_operator: ($) =>
      choice(
        "<",
        "<=",
        "<>",
        "=",
        ">",
        ">=",
        kw("LT"),
        kw("LE"),
        kw("NE"),
        kw("EQ"),
        kw("GT"),
        kw("GE"),
        kw("BEGINS"),
        kw("MATCHES"),
        kw("CONTAINS")
      ),

    // LITERALS / KEYWORDS

    _name: ($) => choice($.identifier, $.qualified_name),

    boolean_literal: ($) =>
      choice(kw("TRUE"), kw("FALSE"), kw("YES"), kw("NO")),

    _integer_literal: ($) => /[0-9]+/,

    _decimal_literal: ($) =>
      seq($._integer_literal, alias($._namedot, "."), $._integer_literal),

    number_literal: ($) => choice($._integer_literal, $._decimal_literal),

    string_literal: ($) => seq($._escaped_string, optional(seq(":", $.string_literal_attribute))),

    identifier: ($) => /[A-Z|a-z|\-|\\_]{1}[#+&A-Z|a-z|\-|\\_|0-9]*/i,

    // variable_name: ($) => choice(
    //   $.identifier,
    //   seq($.identifier, "&")
    // ),

    qualified_name: ($) =>
      seq(
        $.identifier,
        repeat1(seq(alias($._namedot, "."), choice($.identifier, "*")))
      ),

    // TUNING

    of: ($) => seq(kw("OF"), $._name),

    query_tuning: ($) =>
      choice(
        kw("NO-LOCK"),
        kw("SHARE-LOCK"),
        kw("EXCLUSIVE-LOCK"),
        kw("NO-WAIT"),
        kw("NO-ERROR"),
        kw("NO-PREFETCH"),
        seq(kw("USE-INDEX"), $.identifier),
        $.using
      ),

    using: ($) =>
      seq(
        kw("USING"),
        seq($.using_field, repeat(seq(kw("AND"), $.using_field)))
      ),

    _find_type: ($) =>
      choice(kw("FIRST"), kw("LAST"), kw("NEXT"), kw("PREV"), kw("CURRENT")),

    // PARAMETERS and others

    object_access: ($) =>
      prec(2, seq(
        field(
          "object",
          choice($.new_expression, $.function_call, $.constant, $._name)
        ),
        repeat1(seq(alias($._namecolon, ":"), field("property", $.identifier)))
      )),

    where_clause: ($) => seq(kw("WHERE"), field("condition", $._expression)),

    using_field: ($) =>
      seq(
        optional($._frame),
        field("field", $._name)
      ),

    function_call: ($) =>
      prec.right(
        1,
        seq(
          field(
            "function",
            choice($.identifier, prec.right(2, $.object_access))
          ),
          alias($.function_arguments, $.arguments),
          optional(kw("NO-ERROR"))
        )
      ),

    _return_action: ($) =>
      choice(
        seq(kw("ERROR"), optional($._return_value_expression)),
        kw("NO-APPLY"),
        $._return_value_expression
      ),

    // PHRASES

    _frame: ($) => seq(kw("FRAME"), field("frame", choice($.identifier, $.constant))),

    _definition: ($) =>
      choice(
        $.variable_definition,
        $.buffer_definition,
        $.browse_definition,
        // $.button_definition,
        $.query_definition,
        $.rectangle_definition,
        $.temp_table_definition,
        $.workfile_definition,
        $.property_definition,
        $.data_source_definition,
        $.event_definition,
        $.dataset_definition,
        $.stream_definition,
        // $.image_definition,
        $.frame_definition,
        $.parameter_definition
      ),

    variable_assignment: ($) => seq($.assignment, $._terminator),

    assignment: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          prec.left(
            field(
              "name",
              choice(
                $.identifier,
                $.qualified_name,
                $.object_access,
                $.member_access,
                $.function_call,
                $.array_access,
                $.in_frame_phrase
              )
            )
          ),
          $.assignment_operator,
          prec.right(choice($._expression, $.include)),
          optional($.when_expression),
          optional(seq(kw("IN"), $._frame))
        )
      ),

    return_statement: ($) =>
      seq(
        alias($._return_keyword, "RETURN"),
        optional($._return_action),
        $._terminator
      ),

    find_statement: ($) =>
      seq(
        kw("FIND"),
        field("type", optional($._find_type)),
        field("table", $._name),
        repeat(
          choice(
            $.of,
            $.query_tuning,
            $.where_clause
          )
        ),
        $._terminator
      ),

    abl_statement: ($) =>
      seq(
        field("statement", $.identifier),
        repeat(prec(-1, $._expression)),
        $._terminator
      ),

    if_statement: ($) =>
      seq(
        $._if_phrase,
        $._statement_body,
        repeat($.else_statement)
      ),

    _if_phrase: ($) =>
      seq(
        kw("IF"),
        field("condition", $._expression),
        kw("THEN")
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    logical_expression: ($) =>
      prec.right(
        PREC.LOGICAL,
        seq($._expression, $._logical_operator, $._expression)
      ),

    _unary_minus_expression: ($) =>
      choice(
        $.identifier,
        $.number_literal,
        $.function_call,
        $.qualified_name,
        $.object_access,
        $.member_access,
        $.parenthesized_expression
      ),

    unary_expression: ($) =>
      choice(
        prec.left(
          PREC.UNARY,
          seq(kw("-"), prec.left($._unary_minus_expression))
        ),
        prec.left(
          PREC.LOGICAL,
          seq(kw("NOT"), prec.left(PREC.LOGICAL, $._expression))
        )
      ),

    ambiguous_expression: ($) => seq(kw("AMBIGUOUS"), $._name),

    current_changed_expression: ($) => seq(kw("CURRENT-CHANGED"), $._name),

    locked_expression: ($) => seq(kw("LOCKED"), $._name),

    input_expression: ($) =>
      seq(
        alias($._input_keyword, "INPUT"),
        optional($._frame),
        field("field", $._name)
      ),

    additive_expression: ($) =>
      prec.left(
        PREC.ADD,
        seq($._expression, $._additive_operator, $._expression)
      ),

    multiplicative_expression: ($) =>
      prec.left(
        PREC.MULTI,
        seq($._expression, $._multiplicative_operator, $._expression)
      ),

    comparison_expression: ($) =>
      prec.right(
        PREC.COMPARE,
        seq($._expression, $._comparison_operator, $._expression)
      ),

    can_find_expression: ($) =>
      seq(
        kw("CAN-FIND"),
        "(",
        $._can_find_body,
        ")"
      ),

    _can_find_body: ($) =>
      seq(
        optional(choice(kw("FIRST"), kw("LAST"))),
        field("table", $._name),
        optional(field("constant", $._literal)),
        repeat(choice($.query_tuning, $.of, $.where_clause)),
      ),

    available_expression: ($) =>
      seq(
        choice(kw("AVAIL"), kw("AVAILABLE")),
        choice($.identifier, $.parenthesized_expression),
      ),

    ternary_expression: ($) =>
      prec.right(
        seq(
          kw("IF"),
          field("condition", $._expression),
          kw("THEN"),
          field("then", $._expression),
          kw("ELSE"),
          field("else", $._expression)
        )
      ),

    _expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.unary_expression,
        $.null_expression,
        $._binary_expression,
        $.ternary_expression,
        $.available_expression,
        $.accumulate_expression,
        $.ambiguous_expression,
        $.temp_table_expression,
        $.current_changed_expression,
        $.locked_expression,
        $.dataset_expression,
        $.input_expression,
        $.can_find_expression,
        $.new_expression,

        $.boolean_literal,
        $.string_literal,
        $.date_literal,
        $.number_literal,
        $.array_literal,

        $.object_access,
        $.member_access,
        $.array_access,
        $.function_call,
        $.in_frame_phrase,

        $._name,
        $.constant
      ),

    _statement: ($) =>
      choice(
        $.var_statement,
        $.message_statement,
        $.null_statement,
        $.procedure_statement,
        $.function_statement,
        $.function_call_statement,
        $.return_statement,
        $.if_statement,
        $.for_statement,
        $.repeat_statement,
        $.find_statement,
        $.case_statement,
        $.input_output_statement,
        $.assign_statement,
        $.catch_statement,
        $.finally_statement,
        $.accumulate_statement,
        $.undo_statement,
        $.error_scope_statement,
        $.using_statement,
        $.on_statement,
        $.prompt_for_statement,
        $.release_statement,
        $.run_statement,
        $.enum_statement,
        $.abl_statement,

        $.variable_assignment,
        $.preprocessor_directive,
        $.include,
        $.annotation //TODO: Check should it be in supertype
      )
  }
});

function _list(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function kw(keyword) {
  if (keyword.toUpperCase() != keyword) {
    throw new Error(`Expected upper case keyword got ${keyword}`);
  }

  return alias(reserved(createCaseInsensitiveRegex(keyword)), keyword);
}

function reserved(regex) {
  return token(prec(1, new RegExp(regex)));
}

function createCaseInsensitiveRegex(word) {
  return new RegExp(
    word
      .split("")
      .map((letter) => `[${letter.toLowerCase()}${letter.toUpperCase()}]`)
      .join("")
  );
}
